<resources>
    <string name="app_name">Totalizator</string>

    <string name="content_description_end_icon">end cross</string>
    <string name="first_player">First player</string>

    <string name="bet_currency">%d UAH</string>
    <string name="draw_bet_amount">Draw %d UAH</string>
    <string name="players_vs_players_title">Players VS Players</string>
    <string name="players_vs_players_body">Bet on winner - grab losers money. \nThe more you bet, the more prize share you get. When event started - bets stopped, video stream begins.</string>

    <string name="chat_troll_provoke_title">Chat, troll, provoke…</string>
    <string name="chat_troll_provoke_body">Application chat brings fun to the game.</string>

    <string name="less_commission_title_1">LESS COMMISSION</string>
    <string name="less_commission_title_2">MORE BONUSES</string>

    <string name="less_commission_body">3% commission is taken from winnings. \n2% goes to the system, 1% - to the referrers. Get bonuses, spend them for little advantages like live coupons or cashouts.</string>

    <string name="error_title">ERROR</string>
    <string name="error_body">ERROR</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>

    <string name="bet_win_and_take_money_from_rivals">Bet, win and take money from rivals</string>
    <string name="bet_on">Bet on %s</string>

    <string name="text">Text</string>
    <string name="cancel">Cancel</string>
    <string name="bet">BET</string>
    <string name="command_a_command_b">Command A vs Command B</string>
    <string name="event_vs">%1$s vs %2$s</string>
    <string name="min_bet">Min stake - 10.0</string>
    <string name="command_a">Command A</string>
    <string name="possible_gain">Possible payment %1$.1f</string>
    <string name="do_bet">Place a bet %1$.1f</string>
    <string name="do_bet_simple">Place a bet</string>

    <string name="draw">Draw</string>
    <string name="events_network_error">An error occurred while download</string>

    <string name="login_password_wrong">Forgot your password?</string>
    <string name="login_terms_of_use">Terms of use</string>
    <string name="login_login_error">Check if you entered the correct email address</string>
    <string name="login_password_error">Password length must be greater than 6</string>
    <string name="login_username_error">Username length must be greater than 3</string>
    <string name="login_email_validation_error">Check if you entered the correct email address</string>
    <string name="login_network_error_dialog_body">User does not exist</string>
    <string name="login_network_error_dialog_button">OK</string>

    <string name="register_title_date_picker">Date of birthday</string>
    <string name="register_network_error_dialog_body">User exist</string>
    <string name="register_birthday_error">Only adults can use the application</string>
    <string name="register_error_dialog_button">OK</string>
    <string name="your_request_is_being_processed">Your request is being processed</string>
    <string name="bet_placed">Bet Placed</string>
    <string name="loading_error">Loading error...</string>
    <string name="general_error_text">Oops, something went wrong</string>

    <string name="withdraw">withdraw</string>
    <string name="deposit">deposit</string>
    <string name="go_deposit">Go Deposit</string>
    <string name="go_withdraw">Go Withdraw</string>

    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_image">User image</string>
    <string name="you">You</string>
    <string name="no_money">No money</string>
    <string name="live">Live</string>
    <string name="all_events">All events</string>

    <string name="withdraw_text">Withdraw money</string>
    <string name="deposit_text">Make a deposit</string>
    <string name="not_enough_money_to_withdraw">Not enough money to withdraw</string>
    <string name="not_enough_money_to_bet">Not enough money to bet</string>
    <string name="bet_less">Bet less</string>

    <string name="sport_logo">Sport logo</string>
    <string name="message">Message</string>


    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="active">Active</string>
    <string name="you_placed_a_bet">You placed a bet: $s</string>
    <string name="close">Close</string>
    <string name="placed_bet">Placed: %s</string>
    <string name="start_event">Start time: %s</string>
    <string name="stake">Stake: %s UAH</string>
    <string name="bet_history">Bet history</string>
    <string name="login">Login</string>
    <string name="uah">UAH</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="hint_username">Username</string>
    <string name="viewgroup_test_draw">Draw 1700 uah</string>



</resources>